--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #000000;
+    background-color: #141311;
     color:#ffffff;
-}
-
-footer {
-    padding-left: 10px;
 }
 
 header {
@@ -39,6 +35,8 @@ p.small {
     font-size: small;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
+    padding-left: inherit;
+    color:#BfBfBf;
 }
 
 div.paper_short_title {
@@ -65,11 +63,26 @@ a.code {
 a.code:hover {
     color: #F48200;
     font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a.text_link {
+    color:#F48200
 }
 
 div.year {
     padding-left: 10px;
     color: #494949;
+}
+
+div.text_blurb {
+    padding-left: 10px;
+    padding-bottom: 20px;
+    font-weight: lighter;
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#BfBfBf;
+    font-size: 12pt;
 }
 
 article.download {
