--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #141311;
+    background-color: #282C34;
     color:#ffffff;
 }
 
@@ -77,7 +77,7 @@ a.text_link {
 
 div.year {
     padding-left: 10px;
-    color: #494949;
+    color: #5C6371;
 }
 
 div.text_blurb {
